--- a/webpage/templates/webpage/base.html
+++ b/webpage/templates/webpage/base.html
@@ -81,6 +81,15 @@
                                         <a class="dropdown-item" href="{% url 'webpage:imprint' %}">Imprint | Impressum</a>
                                     </div>
                                 </li>
+                                <li class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data
+                                        <span class="caret"/>
+                                    </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="{% url 'myprodigy:dataset_browse' %}">Datasets</a>
+                                            <a class="dropdown-item" href="{% url 'myprodigy:example_browse' %}">Samples</a>
+                                        </div>
+                                    </li>
                                 {% if 'vocabs' in APPS %}
                                     {% if user.is_authenticated %}
                                         <li class="nav-item dropdown">
