views for custom nersample class added

--- a/webpage/templates/webpage/base.html
+++ b/webpage/templates/webpage/base.html
@@ -87,7 +87,7 @@
                                     </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="{% url 'myprodigy:dataset_browse' %}">Datasets</a>
-                                            <a class="dropdown-item" href="{% url 'myprodigy:example_browse' %}">Samples</a>
+                                            <a class="dropdown-item" href="{% url 'myprodigy:nersample_browse' %}">Samples</a>
                                         </div>
                                     </li>
                                 {% if 'vocabs' in APPS %}
