rework of data handling

--- a/webpage/templates/webpage/base.html
+++ b/webpage/templates/webpage/base.html
@@ -86,7 +86,7 @@
                                         <span class="caret"/>
                                     </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="{% url 'myprodigy:dataset_browse' %}">Datasets</a>
+                                            <a class="dropdown-item" href="{% url 'myprodigy:nerdataset_browse' %}">Datasets</a>
                                             <a class="dropdown-item" href="{% url 'myprodigy:nersample_browse' %}">Samples</a>
                                         </div>
                                     </li>
