--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -17,8 +17,9 @@
             <div class="col-md-12" style="text-align:center">
                 <h4>Data-Count</h4>
             </div>
-            {% create_object_count app='vocabs' as models %}
+            {% create_object_count app='myprodigy' as models %}
             {% for x in models %}
+              {% if x.link %}
                 <div class="col-md-4  text-center">
                     <div class="card flex-md-row mb-4 box-shadow">
                         <div class="card-body">
@@ -30,6 +31,7 @@
                         </div>
                     </div>
                 </div>
+              {% endif %}
             {% endfor %}
         </div>
     </div>
